--- a/src/Details/NoodleDetails.css
+++ b/src/Details/NoodleDetails.css
@@ -39,7 +39,10 @@
 
 #details #details_organizer img {
   width: 150px;
+  height: 150px;
   border-radius: 75px;
+  object-fit: cover;
+  object-position: 100% 0%;
 }
 
 #details #details_organizer_actions {
