--- a/src/User/LoginUser.css
+++ b/src/User/LoginUser.css
@@ -26,6 +26,8 @@
   position: absolute;
   left: 75px;
   top: 75px;
+  object-fit: cover;
+  object-position: 100% 0%;
 }
 
 #user_login .login_user_button p {
